--- a/task_1/Insert_data_into_table.ipynb
+++ b/task_1/Insert_data_into_table.ipynb
@@ -1445,26 +1445,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-12-23 17:25:38,009 INFO sqlalchemy.engine.base.Engine select version()\n",
-      "2018-12-23 17:25:38,010 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2018-12-23 17:25:38,014 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
-      "2018-12-23 17:25:38,016 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2018-12-23 17:25:38,019 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2018-12-23 17:25:38,020 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2018-12-23 17:25:38,025 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2018-12-23 17:25:38,026 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2018-12-23 17:25:38,030 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
-      "2018-12-23 17:25:38,033 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2018-12-23 17:25:38,038 INFO sqlalchemy.engine.base.Engine DROP TABLE police_department;\n",
-      "2018-12-23 17:25:38,039 INFO sqlalchemy.engine.base.Engine {}\n"
+      "2018-12-23 18:33:19,165 INFO sqlalchemy.engine.base.Engine select version()\n",
+      "2018-12-23 18:33:19,166 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:19,170 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
+      "2018-12-23 18:33:19,173 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:19,176 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-12-23 18:33:19,177 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:19,180 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-12-23 18:33:19,182 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:19,185 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
+      "2018-12-23 18:33:19,188 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:19,192 INFO sqlalchemy.engine.base.Engine DROP TABLE police_department;\n",
+      "2018-12-23 18:33:19,194 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:19,211 INFO sqlalchemy.engine.base.Engine COMMIT\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.result.ResultProxy at 0x10c50f630>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1473,9 +1484,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-12-23 18:33:20,690 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2018-12-23 18:33:20,691 INFO sqlalchemy.engine.base.Engine {'name': 'police_department'}\n",
+      "2018-12-23 18:33:20,707 INFO sqlalchemy.engine.base.Engine \n",
+      "CREATE TABLE police_department (\n",
+      "\tindex BIGINT, \n",
+      "\t\"Crime Id\" BIGINT, \n",
+      "\t\"Original Crime Type Name\" TEXT, \n",
+      "\t\"Report Date\" TEXT, \n",
+      "\t\"Call Date\" TEXT, \n",
+      "\t\"Offense Date\" TEXT, \n",
+      "\t\"Call Time\" TEXT, \n",
+      "\t\"Call Date Time\" TEXT, \n",
+      "\t\"Disposition\" TEXT, \n",
+      "\t\"Address\" TEXT, \n",
+      "\t\"City\" TEXT, \n",
+      "\t\"State\" TEXT, \n",
+      "\t\"Agency Id\" BIGINT, \n",
+      "\t\"Address Type\" TEXT, \n",
+      "\t\"Common Location\" TEXT\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2018-12-23 18:33:20,708 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:20,734 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2018-12-23 18:33:20,736 INFO sqlalchemy.engine.base.Engine CREATE INDEX ix_police_department_index ON police_department (index)\n",
+      "2018-12-23 18:33:20,737 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2018-12-23 18:33:20,746 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2018-12-23 18:33:22,333 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2018-12-23 18:34:23,718 INFO sqlalchemy.engine.base.Engine INSERT INTO police_department (index, \"Crime Id\", \"Original Crime Type Name\", \"Report Date\", \"Call Date\", \"Offense Date\", \"Call Time\", \"Call Date Time\", \"Disposition\", \"Address\", \"City\", \"State\", \"Agency Id\", \"Address Type\", \"Common Location\") VALUES (%(index)s, %(Crime Id)s, %(Original Crime Type Name)s, %(Report Date)s, %(Call Date)s, %(Offense Date)s, %(Call Time)s, %(Call Date Time)s, %(Disposition)s, %(Address)s, %(City)s, %(State)s, %(Agency Id)s, %(Address Type)s, %(Common Location)s)\n",
+      "2018-12-23 18:34:23,740 INFO sqlalchemy.engine.base.Engine ({'index': 0, 'Crime Id': 160942891, 'Original Crime Type Name': 'Muni Inspection', 'Report Date': '2016-04-03T00:00:00', 'Call Date': '2016-04-03T00:00:00', 'Offense Date': '2016-04-03T00:00:00', 'Call Time': '18:15', 'Call Date Time': '2016-04-03T18:15:00', 'Disposition': 'Not recorded', 'Address': '900 Block Of Ulloa St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Common Location', 'Common Location': 'West Portal Muni, Sf'}, {'index': 1, 'Crime Id': 160930487, 'Original Crime Type Name': '913', 'Report Date': '2016-04-02T00:00:00', 'Call Date': '2016-04-02T00:00:00', 'Offense Date': '2016-04-02T00:00:00', 'Call Time': '03:55', 'Call Date Time': '2016-04-02T03:55:00', 'Disposition': 'HAN', 'Address': 'Folsom St/13th St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Intersection', 'Common Location': None}, {'index': 2, 'Crime Id': 160941602, 'Original Crime Type Name': 'Passing Call', 'Report Date': '2016-04-03T00:00:00', 'Call Date': '2016-04-03T00:00:00', 'Offense Date': '2016-04-03T00:00:00', 'Call Time': '11:49', 'Call Date Time': '2016-04-03T11:49:00', 'Disposition': 'HAN', 'Address': '2900 Block Of Taylor St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Common Location', 'Common Location': 'Fishermans Wharf, Sf'}, {'index': 3, 'Crime Id': 160922392, 'Original Crime Type Name': 'Passing Call', 'Report Date': '2016-04-01T00:00:00', 'Call Date': '2016-04-01T00:00:00', 'Offense Date': '2016-04-01T00:00:00', 'Call Time': '16:09', 'Call Date Time': '2016-04-01T16:09:00', 'Disposition': 'Not recorded', 'Address': '1100 Block Of Market St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Common Location', 'Common Location': 'Civic Center Muni, Sf'}, {'index': 4, 'Crime Id': 160923170, 'Original Crime Type Name': 'Threats / Harassment', 'Report Date': '2016-04-01T00:00:00', 'Call Date': '2016-04-01T00:00:00', 'Offense Date': '2016-04-01T00:00:00', 'Call Time': '19:11', 'Call Date Time': '2016-04-01T19:11:00', 'Disposition': 'NOM', 'Address': '26th Av/geary Bl', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Intersection', 'Common Location': None}, {'index': 5, 'Crime Id': 160921127, 'Original Crime Type Name': 'Rep', 'Report Date': '2016-04-01T00:00:00', 'Call Date': '2016-04-01T00:00:00', 'Offense Date': '2016-04-01T00:00:00', 'Call Time': '10:08', 'Call Date Time': '2016-04-01T10:08:00', 'Disposition': 'HAN', 'Address': '300 Block Of Bryant St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Premise Address', 'Common Location': None}, {'index': 6, 'Crime Id': 160931534, 'Original Crime Type Name': 'Passing Call', 'Report Date': '2016-04-02T00:00:00', 'Call Date': '2016-04-02T00:00:00', 'Offense Date': '2016-04-02T00:00:00', 'Call Time': '12:08', 'Call Date Time': '2016-04-02T12:08:00', 'Disposition': 'HAN', 'Address': '600 Blk Larch St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Geo-Override', 'Common Location': None}, {'index': 7, 'Crime Id': 160933025, 'Original Crime Type Name': 'Passing Call', 'Report Date': '2016-04-02T00:00:00', 'Call Date': '2016-04-02T00:00:00', 'Offense Date': '2016-04-02T00:00:00', 'Call Time': '19:04', 'Call Date Time': '2016-04-02T19:04:00', 'Disposition': 'Not recorded', 'Address': '1100 Blk Fillmore St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Geo-Override', 'Common Location': None}  ... displaying 10 of 2025347 total bound parameter sets ...  {'index': 2025345, 'Crime Id': 182524010, 'Original Crime Type Name': 'Traffic Stop', 'Report Date': '2018-09-09T00:00:00', 'Call Date': '2018-09-09T00:00:00', 'Offense Date': '2018-09-09T00:00:00', 'Call Time': '23:48', 'Call Date Time': '2018-09-09T23:48:00', 'Disposition': 'ADV', 'Address': 'Market St/post St', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Intersection', 'Common Location': None}, {'index': 2025346, 'Crime Id': 182524011, 'Original Crime Type Name': 'Audible Alarm', 'Report Date': '2018-09-09T00:00:00', 'Call Date': '2018-09-09T00:00:00', 'Offense Date': '2018-09-09T00:00:00', 'Call Time': '23:46', 'Call Date Time': '2018-09-09T23:46:00', 'Disposition': 'PAS', 'Address': '3200 Block Of 20th Av', 'City': 'San Francisco', 'State': 'CA', 'Agency Id': 1, 'Address Type': 'Premise Address', 'Common Location': None})\n",
+      "2018-12-23 18:45:55,382 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.clock()\n",
     "csv.to_sql(\"police_department\", engine)\n",
@@ -1484,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1493,8 +1542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-12-23 17:12:13,316 INFO sqlalchemy.engine.base.Engine SELECT COUNT(*) FROM police_department;\n",
-      "2018-12-23 17:12:13,319 INFO sqlalchemy.engine.base.Engine {}\n"
+      "2018-12-23 18:45:56,494 INFO sqlalchemy.engine.base.Engine SELECT COUNT(*) FROM police_department;\n",
+      "2018-12-23 18:45:56,497 INFO sqlalchemy.engine.base.Engine {}\n"
      ]
     }
    ],
@@ -1504,14 +1553,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 0.010218000000008942\n",
+      "Elapsed time: 241.784728\n",
       "Number of records:  (2025347,)\n"
      ]
     }
